[package]
name = "easee-rs"
version = "0.1.1"
edition = "2021"
description = "A client for the Easee API"
license = "MIT OR Apache-2.0"
keywords = ["easee", "rest", "api", "client"]
repository = "https://github.com/flowionab/easee"
authors = ["Joatin Granlund <joatin@granlund.io>"]


[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }